# cereal

./: CMakeLists.txt  cereal-config.cmake.in
sandbox/: CMakeLists.txt
sandbox/sandbox_shared_lib/: CMakeLists.txt
unittests/: CMakeLists.txt  cmake-config-module.cmake
unittests/cpp17/: CMakeLists.txt
